# MIND

./: README.md  requirements.txt
LLM_training/dialogue_level_training/: dialogue_experiment_tracker.py  dialogue_model_exp.py
LLM_training/dialogue_level_training/dialogue_baseline_models/: dialogue_logistic_regression.py  dialogue_random_forest.py
LLM_training/sentence_level_training/: sentence_experiment_tracker.py  sentence_model_exp.py
agents/dialogue_level/simple_agent_classification/: pyproject.toml
agents/dialogue_level/simple_agent_classification/src/simple_agent_classification/: crew.py  main.py
agents/dialogue_level/simple_agent_classification/src/simple_agent_classification/config/: agents.yaml  tasks.yaml
agents/sentence_level/simple_agent_classification/: README.md  pyproject.toml
agents/sentence_level/simple_agent_classification/src/simple_agent_classification/: crew.py  main.py
agents/sentence_level/simple_agent_classification/src/simple_agent_classification/config/: agents.yaml  tasks.yaml
data/: dialoguelevel_mentalmanip_detailed.xlsx
dialogue_XAI/: dialogue_XAIcomparison.py  dialogue_expected_gradients.py  dialogue_integrated_gradients.py  dialogue_lime.py  dialogue_raw_attention.py  dialogue_shap.py  dialogue_token_occlusion.py  sampled_dialogues.csv
sentence_XAI/: sampled_sentences.csv  sentence_expected_gradient.py  sentence_integrated_gradient.py  sentence_lime.py  sentence_raw_attention.py  sentence_shap.py  sentence_token_occlusion.py  sentence_visualisation.py  sentence_xai_comparison.py
(+13 files in other folders)
